--- a/prima_app/templates/index.html
+++ b/prima_app/templates/index.html
@@ -16,6 +16,12 @@ e poi dal name dell’url definito in prima_app/urls.py-->
         <li><a href="{% url 'prima_app:lista' %}">Lista</a></li>
         <li><a href="{% url 'prima_app:ChiSiamo'%}">Chi siamo</a></li>
         <li><a href="{% url 'prima_app:variabili'%}">Variabili</a></li> 
+        <li><a href="{% url 'seconda_app:es_for'%}">ciclo for</a></li>
+        <li><a href="{% url 'seconda_app:es_if'%}">condizione if</a></li>
+        <li><a href="{% url 'seconda_app:es_ifelse'%}">condizione if-else</a></li>
+        
+
+
     </ol>
 </body>
 </html>
