--- a/prima_app/templates/index.html
+++ b/prima_app/templates/index.html
@@ -1,16 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
-</head>
-<body>
-<!--consente di inserire dinamicamente un link senza doverlo scrivere noi.
-Si usa il namespace (app_name) definito in primo_progetto/urls.py seguito dai due punti 
-e poi dal name dell’url definito in prima_app/urls.py-->
-    <ol>
+%extends "base.html"%}
+
+{%block title%} {{block.super}} | variabili {%endblock title%}
+
+{%block content%}
+<ol>
         <li><a href="{% url 'prima_app:homepage'%}">Home page benvenuto</a></li>
         <li><a href="{% url 'prima_app:welcome' %}">Welcome</a></li>
         <li><a href="{% url 'prima_app:lista' %}">Lista</a></li>
@@ -19,9 +12,5 @@ e poi dal name dell’url definito in prima_app/urls.py-->
         <li><a href="{% url 'seconda_app:es_for'%}">ciclo for</a></li>
         <li><a href="{% url 'seconda_app:es_if'%}">condizione if</a></li>
         <li><a href="{% url 'seconda_app:es_ifelse'%}">condizione if-else</a></li>
-        
-
-
-    </ol>
-</body>
-</html>
+</ol>
+{%endblock content%}
