--- a/prima_app/templates/ChiSiamo.html
+++ b/prima_app/templates/ChiSiamo.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>chi siamo</title>
-</head>
-<body>
-    <h1>Chi siamo</h1>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae aut totam corporis earum, aliquid provident, aspernatur recusandae nulla exercitationem quas assumenda excepturi ea veniam perspiciatis pariatur, saepe nemo delectus sequi!
-</body>
-</html>
+{%extends "base.html"%}
+
+{%block title%} {{block.super}} | Chi siamo {%endblock title%}
+
+{%block content%}
+<h1>Chi siamo</h1>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, eveniet id? Saepe quam illo nemo iure itaque consequatur obcaecati voluptatum quaerat repellendus totam minima id, vitae, officiis placeat nam et.</p>
+{%endblock content%}
