--- a/prima_app/templates/welcome.html
+++ b/prima_app/templates/welcome.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>welcome</title>
-</head>
-<body>
-    <h1>Welcome</h1>
-</body>
-</html>
+{%extends "base.html"%}
+
+{%block title%} {{block.super}} | welcome {%endblock title%}
+
+{%block content%}
+<h1>CIAO</h1>
+{%endblock content%}
