--- a/seconda_app/Templates/es_for.html
+++ b/seconda_app/Templates/es_for.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>es_for</title>
-</head>
-<body>
-    cicla una sequenza usando <b>forloop.counter</b>
+%extends "base.html"%}
+
+{%block title%} {{block.super}} | for {%endblock title%}
+
+{%block content%}
+cicla una sequenza usando <b>forloop.counter</b>
     <br/>
     {% for x in list2 %}
     <i>{{ forloop.counter }}</i> : {{ x }} <br>
@@ -54,5 +50,4 @@
     {% for x in list2 reversed %}
         <i>elemento</i> - {{ x }} <br/>
     {% endfor %}
-</body>
-</html>
+{%endblock content%}
