--- a/prima_app/templates/index.html
+++ b/prima_app/templates/index.html
@@ -1,6 +1,6 @@
-%extends "base.html"%}
+{%extends "base.html"%}
 
-{%block title%} {{block.super}} | variabili {%endblock title%}
+{%block title%} {{block.super}} | index {%endblock title%}
 
 {%block content%}
 <ol>
