--- a/prima_app/templates/homepage.html
+++ b/prima_app/templates/homepage.html
@@ -1,6 +1,6 @@
 {%extends "base.html"%}
 
-{%block title%} {{block.super}} | homepage {%endblock title%}
+{%block title%}  homepage {%endblock title%}
 
 {%block content%}
 <h1>BENVENUTO</h1>
