--- a/seconda_app/Templates/es_for.html
+++ b/seconda_app/Templates/es_for.html
@@ -1,6 +1,6 @@
-%extends "base.html"%}
+{%extends "base.html"%}
 
-{%block title%} {{block.super}} | for {%endblock title%}
+{%block title%} for {%endblock title%}
 
 {%block content%}
 cicla una sequenza usando <b>forloop.counter</b>
