--- a/prima_app/templates/ChiSiamo.html
+++ b/prima_app/templates/ChiSiamo.html
@@ -1,6 +1,6 @@
 {%extends "base.html"%}
 
-{%block title%} {{block.super}} | Chi siamo {%endblock title%}
+{%block title%}  Chi siamo {%endblock title%}
 
 {%block content%}
 <h1>Chi siamo</h1>
