--- a/prima_app/templates/lista.html
+++ b/prima_app/templates/lista.html
@@ -1,6 +1,6 @@
-%extends "base.html"%}
+{%extends "base.html"%}
 
-{%block title%} {{block.super}} | lista {%endblock title%}
+{%block title%}  lista {%endblock title%}
 
 {%block content%}
 <ol>
