--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,18 @@
                 </div>
               </li>
 
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  news
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="{% url 'news:homepage'%}">homepage</a>
+                  <a class="dropdown-item" href="{% url 'news:articolo_detail'%}">articolo_detail</a>
+                  <a class="dropdown-item" href="{% url 'news:lista_articoli'%}">lista_articoli</a>
+                  <a class="dropdown-item" href="{% url 'news:lsita_giornalisti'%}">lsita_giornalisti</a>
+                </div>
+              </li>
+
 
             <li class="nav-item">
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
