--- a/templates/base.html
+++ b/templates/base.html
@@ -55,10 +55,8 @@
                   news
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="{% url 'news:homepage'%}">homepage</a>
-                  <a class="dropdown-item" href="{% url 'news:articolo_detail'%}">articolo_detail</a>
                   <a class="dropdown-item" href="{% url 'news:lista_articoli'%}">lista_articoli</a>
-                  <a class="dropdown-item" href="{% url 'news:lsita_giornalisti'%}">lsita_giornalisti</a>
+                  <a class="dropdown-item" href="{% url 'news:lista_giornalisti'%}">lsita_giornalisti</a>
                 </div>
               </li>
 
