--- a/templates/base.html
+++ b/templates/base.html
@@ -60,6 +60,15 @@
                 </div>
               </li>
 
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  prova_pratica1
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="{% url 'prova_pratica1:view_b'%}">view_b</a>
+                  <a class="dropdown-item" href="{% url 'prova_pratica1:view_c'%}">view_c</a>
+                </div>
+              </li>
 
             <li class="nav-item">
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
